<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_work"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/txt_app_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="56dp"
      android:fontFamily="@font/alata"
      android:text="@string/title"
      android:textColor="@color/text_work"
      android:textSize="60sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/img_logo"
      android:layout_width="408dp"
      android:layout_height="286dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="112dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.517"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo_taskodoro"
      android:contentDescription="@string/taskodoro_logo" />

  <EditText
      android:id="@+id/edt_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="7dp"
      android:autofillHints="Insert email"
      android:ems="10"
      android:fontFamily="@font/alata"
      android:hint="@string/edt_email_hint"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.507"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_email"
      tools:ignore="TextContrastCheck" />

  <EditText
      android:id="@+id/edt_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="102dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="99dp"
      android:autofillHints=""
      android:ems="10"
      android:fontFamily="@font/alata"
      android:hint="@string/edt_password_hint"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.552"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edt_email"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/txt_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/alata"
      android:text="@string/email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/img_logo"
      tools:ignore="TextContrastCheck,TextContrastCheck" />

  <TextView
      android:id="@+id/txt_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edt_email"
      tools:ignore="TextContrastCheck" />

  <Button
      android:id="@+id/bt_log_in"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="14dp"
      android:layout_marginBottom="88dp"
      android:backgroundTint="@color/text_work"
      android:text="@string/log_in"
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edt_password"
      tools:ignore="TextContrastCheck" />

  <Button
      android:id="@+id/bt_sign_up"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/buttons"
      android:text="@string/sign_up"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/bt_log_in" />

</androidx.constraintlayout.widget.ConstraintLayout>